[package]
name = "rounded-div"
description = "Get rounded result of an integer division"
version = "0.0.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/rounded-div"
repository = "https://github.com/KSXGitHub/rounded-div"
categories = ["no-std"]
keywords = [
  "round",
  "integer",
  "divide",
]
include = [
  "/cli",
  "/src",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "rounded_div"
path = "src/lib.rs"
doc = true

[[bin]]
name = "rounded-div"
path = "cli/rounded-div.rs"
doc = false
required-features = ["cli"]

[[bin]]
name = "rounded-div-completions"
path = "cli/rounded-div-completions.rs"
doc = false
required-features = ["cli"]

[features]
default = []
std = []
cli = ["std"]

[dependencies]
structopt = "^0.3.21"
structopt-utilities = "^0.0.8"

[profile.release]
opt-level = "s"

[dev-dependencies]
command-extra = "^1.0.0"
pipe-trait = "^0.3.2"
