[package]
name = "rounded-div"
description = "Get rounded result of an integer division"
version = "0.1.4"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/rounded-div"
repository = "https://github.com/KSXGitHub/rounded-div"
categories = [
  "algorithms",
  "mathematics",
  "no-std",
]
keywords = [
  "round",
  "integer",
  "divide",
]
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "rounded_div"
path = "src/lib.rs"
doc = true

[dev-dependencies]
num = { version = "0.4.3", default-features = false }
